<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">特殊作业</string>
    <string name="exit_app">再按一次退出应用</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">特殊作业管理系统</string>
    <string name="account_hint">账 号</string>
    <string name="pwd_hint">密 码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="login_hint">登 录</string>
</resources>
