<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_transparent_40p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/shape_divider_transparent_16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:showDividers="middle">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_43" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_account"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_60"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_90"
            android:layout_marginRight="@dimen/dp_60"
            android:hint="@string/account_hint"
            android:textColorHint="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/dp_8"
            app:boxCornerRadiusBottomStart="@dimen/dp_8"
            app:boxCornerRadiusTopEnd="@dimen/dp_8"
            app:boxCornerRadiusTopStart="@dimen/dp_8"
            app:boxStrokeColor="@drawable/login_input_bg"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:tag="binding_1"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/shape_cursor_white"
                android:textSize="@dimen/dp_18" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_60"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginRight="@dimen/dp_60"
            android:hint="@string/pwd_hint"
            android:textColorHint="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/dp_8"
            app:boxCornerRadiusBottomStart="@dimen/dp_8"
            app:boxCornerRadiusTopEnd="@dimen/dp_8"
            app:boxCornerRadiusTopStart="@dimen/dp_8"
            app:boxStrokeColor="@drawable/login_input_bg"
            app:hintTextColor="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:tag="binding_2"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/shape_cursor_white"
                android:textSize="@dimen/comm_ui_sp_18" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_remember_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/dp_56"
            android:layout_marginLeft="@dimen/dp_56"
            android:layout_marginRight="@dimen/dp_56"
            android:tag="binding_3"
            android:text="@string/remember_pwd"
            android:textColor="@color/white"
            android:textSize="@dimen/comm_ui_sp_16"
            app:buttonTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Button.BottomAction.Primary"
            android:layout_marginHorizontal="@dimen/dp_60"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_60"
            android:tag="binding_4"
            android:text="@string/login_hint" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>